src/FireWrapper/wrapper.h

typedef struct ImGuiTextRange ImGuiTextRange;
typedef struct ImVec4 ImVec4;
typedef struct ImVec2 ImVec2;
typedef struct ImGuiWindowClass ImGuiWindowClass;
typedef struct ImGuiViewport ImGuiViewport;
typedef struct ImGuiTextFilter ImGuiTextFilter;
typedef struct ImDrawData ImDrawData;
struct ImDrawData;
struct ImGuiTextFilter;
struct ImGuiViewport;
struct ImGuiWindowClass;
typedef int ImGuiDockNodeFlags;
typedef int ImGuiViewportFlags;
typedef unsigned int ImGuiID;
typedef struct ImVector { int Size; int Capacity; void* Data; } ImVector;
typedef struct ImVector_ImGuiTextRange { int Size; int Capacity; ImGuiTextRange* Data; } ImVector_ImGuiTextRange;
struct ImVec2
{
	float x, y;
};
struct ImVec4
{
	float x, y, z, w;
};
struct ImGuiWindowClass
{
	ImGuiID ClassId;
	ImGuiID ParentViewportId;
	ImGuiViewportFlags ViewportFlagsOverrideSet;
	ImGuiViewportFlags ViewportFlagsOverrideClear;
	ImGuiDockNodeFlags DockNodeFlagsOverrideSet;
	ImGuiDockNodeFlags DockNodeFlagsOverrideClear;
	bool DockingAlwaysTabBar;
	bool DockingAllowUnclassed;
};
struct ImGuiTextFilter
{
	char InputBuf[256];
	ImVector_ImGuiTextRange Filters;
	int CountGrep;
};
struct ImDrawData
{
	bool Valid;
	ImDrawList** CmdLists;
	int CmdListsCount;
	int TotalIdxCount;
	int TotalVtxCount;
	ImVec2 DisplayPos;
	ImVec2 DisplaySize;
	ImVec2 FramebufferScale;
	ImGuiViewport* OwnerViewport;
};
struct ImGuiViewport
{
	ImGuiID ID;
	ImGuiViewportFlags Flags;
	ImVec2 Pos;
	ImVec2 Size;
	ImVec2 WorkOffsetMin;
	ImVec2 WorkOffsetMax;
	float DpiScale;
	ImDrawData* DrawData;
	ImGuiID ParentViewportId;
	void* RendererUserData;
	void* PlatformUserData;
	void* PlatformHandle;
	void* PlatformHandleRaw;
	bool PlatformRequestMove;
	bool PlatformRequestResize;
	bool PlatformRequestClose;
};
typedef enum {
	ImGuiPlotType_Lines,
	ImGuiPlotType_Histogram
}ImGuiPlotType;
struct ImGuiTextRange
{
	const char* b;
	const char* e;
};
typedef ImGuiTextFilter::ImGuiTextRange ImGuiTextRange;
typedef ImVector<ImGuiTextRange> ImVector_ImGuiTextRange;
CIMGUI_API void ImVec2_destroy(ImVec2* self);
CIMGUI_API ImVec2* ImVec2_ImVec2Float(float _x, float _y);
CIMGUI_API void ImVec4_destroy(ImVec4* self);
CIMGUI_API ImVec4* ImVec4_ImVec4Float(float _x, float _y, float _z, float _w);
CIMGUI_API void igPlotLinesFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API void igPlotHistogramFnFloatPtr(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 graph_size);
CIMGUI_API void igSetAllocatorFunctions(void*(*alloc_func)(size_t sz, void* user_data), void(*free_func)(void* ptr, void* user_data), void* user_data);
CIMGUI_API ImGuiWindowClass* ImGuiWindowClass_ImGuiWindowClass(void);
CIMGUI_API void ImGuiWindowClass_destroy(ImGuiWindowClass* self);
CIMGUI_API ImGuiTextFilter* ImGuiTextFilter_ImGuiTextFilter(const char* default_filter);
CIMGUI_API bool ImGuiTextFilter_Draw(ImGuiTextFilter* self, const char* label, float width);
CIMGUI_API bool ImGuiTextFilter_PassFilter(ImGuiTextFilter* self, const char* text, const char* text_end);
CIMGUI_API bool ImGuiTextFilter_IsActive(ImGuiTextFilter* self);
CIMGUI_API void ImGuiTextRange_destroy(ImGuiTextRange* self);
CIMGUI_API ImGuiTextRange* ImGuiTextRange_ImGuiTextRangeStr(const char* _b, const char* _e);
CIMGUI_API bool ImGuiTextRange_empty(ImGuiTextRange* self);
CIMGUI_API void ImGuiTextRange_split(ImGuiTextRange* self, char separator, ImVector_ImGuiTextRange* out);
CIMGUI_API ImGuiViewport* ImGuiViewport_ImGuiViewport(void);
CIMGUI_API void ImGuiViewport_destroy(ImGuiViewport* self);
CIMGUI_API int igPlotEx(ImGuiPlotType plot_type, const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 frame_size);